cpp/judger_pipe/tmp/user/1000000/23357/compiler_error_23357
./tmp/user/1000000/23357/23357.cpp: In function ‘int main()’:
./tmp/user/1000000/23357/23357.cpp:7:1: error: expected ‘;’ before ‘return’
 return 0;
 ^
